# SearchWidget-Tizen

./: CMakeLists.txt  elm_search.c  elm_search.eo  elm_search.h  main.c  search.edc
